fix(sidebar): prevent sidenav hiding behind nav
- add sidenav visibility state to redux store
- allow sidenav to scroll
- expand sidenav when subnav hides
- prevent uiStates from being persisted in localstorage

[finishes #166491349]

--- a/client/assets/pages/_events-page.scss
+++ b/client/assets/pages/_events-page.scss
@@ -21,13 +21,24 @@
     grid-column: sidebar-start/sidebar-end;
     width: rem(330px);
     vertical-align: middle;
+    justify-self: center;
     &-fixed {
       position: fixed;
       width: 20.625rem;
-      top: 5.2rem;
+      height: 100vh;
+      top: 0;
+      overflow-y: scroll;
+      padding-top: 10rem;
+      transition: padding-top .5s ease-in-out;
+      will-change: padding-top;
       @include mobile(600px) {
         position: initial;
+        height: initial;
+        padding-top: initial;
       }
+    }
+    &-fixed.event__sidebar-expanded {
+      padding-top: 5rem;
     }
   }
 
